--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ include(find_directories_containing)
 find_directories_containing(HEADERS "*.h")
 include_directories(${HEADERS})
 
+add_subdirectory(core)
 add_subdirectory(project)
 add_subdirectory(editor)
 add_subdirectory(showmaker)
