renamed project in model

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,6 @@ find_directories_containing(HEADERS "*.h")
 include_directories(${HEADERS})
 
 add_subdirectory(core)
-add_subdirectory(project)
+add_subdirectory(model)
 add_subdirectory(editor)
 add_subdirectory(showmaker)
