simplified cmake, fixed visual studio entry point, imgui demo

--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -1,2 +1,4 @@
 file(GLOB_RECURSE SOURCES *.cpp)
 add_library(editor ${SOURCES})
+target_include_directories(editor PUBLIC .)
+target_link_libraries(editor core imgui)
