--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -1,3 +1,4 @@
 file(GLOB_RECURSE SOURCES *.cpp)
 add_library(model ${SOURCES})
+target_include_directories(model PUBLIC .)
 target_link_libraries(model core)
