--- a/src/showmaker/CMakeLists.txt
+++ b/src/showmaker/CMakeLists.txt
@@ -1,4 +1,8 @@
+include(ResourceCompiler)
+
 file(GLOB_RECURSE SOURCES *.cpp)
-add_executable(showmaker WIN32 ${SOURCES})
+compile_resources(SOURCES fonts fonts/*.ttf)
+add_executable(showmaker ${SOURCES})
 target_link_libraries(showmaker editor imgui nativefiledialog)
 install(TARGETS showmaker RUNTIME DESTINATION ${OUTPUT_DIRECTORY})
+set_target_properties(showmaker PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
