--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -1,4 +1,5 @@
 file(GLOB_RECURSE SOURCES *.cpp)
 add_library(editor ${SOURCES})
 target_include_directories(editor PUBLIC .)
-target_link_libraries(editor model imgui)
+target_include_directories(editor PRIVATE ${ROOT_DIRECTORY}/src/showmaker)
+target_link_libraries(editor model imgui media nativefiledialog showmaker)
