--- a/src/showmaker/CMakeLists.txt
+++ b/src/showmaker/CMakeLists.txt
@@ -6,3 +6,5 @@ add_executable(showmaker ${SOURCES})
 target_link_libraries(showmaker editor imgui nativefiledialog)
 install(TARGETS showmaker RUNTIME DESTINATION ${OUTPUT_DIRECTORY})
 set_target_properties(showmaker PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
+target_include_directories(showmaker PUBLIC .)
+ffmpeg_install_runtimes(showmaker)
