--- a/src/media/CMakeLists.txt
+++ b/src/media/CMakeLists.txt
@@ -1,4 +1,4 @@
 file(GLOB_RECURSE SOURCES *.cpp)
 add_library(media ${SOURCES})
 target_include_directories(media PUBLIC .)
-target_link_libraries(media FFmpeg core)
+target_link_libraries(media FFmpeg core libao)
