--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -35,3 +35,4 @@ target_link_libraries(imgui glad glfw ${GLFW_LIBRARIES})
 add_subdirectory(glad)
 add_subdirectory(ffmpeg)
 add_subdirectory(nativefiledialog)
+add_subdirectory(libao)
