--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -8,6 +8,17 @@ endif ()
 IF (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/nativefiledialog/CMakeLists.txt")
     message(FATAL_ERROR "oops. Missing nativefiledialog. had you cloned with --recursive?")
 endif ()
+IF (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/libao/CMakeLists.txt")
+    message(FATAL_ERROR "oops. Missing libao. had you cloned with --recursive?")
+endif ()
+IF (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/jsoncpp/CMakeLists.txt")
+    message(FATAL_ERROR "oops. Missing jsoncpp. had you cloned with --recursive?")
+endif ()
+
+# disable install directories
+set(CMAKE_INSTALL_INCLUDEDIR ${CMAKE_CURRENT_BINARY_DIR}/install)
+set(CMAKE_INSTALL_BINDIR ${CMAKE_CURRENT_BINARY_DIR}/install)
+set(CMAKE_INSTALL_LIBDIR ${CMAKE_CURRENT_BINARY_DIR}/install)
 
 # configure glfw
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
@@ -37,6 +48,7 @@ set(JSONCPP_WITH_POST_BUILD_UNITTEST OFF CACHE BOOL "" FORCE)
 set(JSONCPP_WITH_WARNING_AS_ERROR OFF CACHE BOOL "" FORCE)
 set(JSONCPP_WITH_STRICT_ISO OFF CACHE BOOL "" FORCE)
 set(JSONCPP_WITH_CMAKE_PACKAGE OFF CACHE BOOL "" FORCE)
+set(JSONCPP_WITH_PKGCONFIG_SUPPORT OFF CACHE BOOL "" FORCE)
 add_subdirectory(jsoncpp)
 
 add_subdirectory(glad)
