--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 version: '{build}'
 image:
+  - Visual Studio 2015
   - Visual Studio 2017
+  - Ubuntu
 configuration:
   - Release
   - Debug
@@ -8,34 +10,23 @@ platform:
   - x64
 
 init:
-  - set arch=
-  - if "%arch%"=="Win64" ( set arch= Win64)
-  - echo %arch%
-  - echo %APPVEYOR_BUILD_WORKER_IMAGE%
-  - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2017" ( set generator="Visual Studio 15 2017%arch%" )
-  - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2015" ( set generator="Visual Studio 14 2015%arch%" )
-  - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2013" ( set generator="Visual Studio 12 2013%arch%" )
-  - echo %generator%
+  - cmd: set generator="%APPVEYOR_BUILD_WORKER_IMAGE% Win64"
+  - cmd: echo %generator%
+
+install:
+  - git submodule update --init --recursive
 
 before_build:
-  - cmd: |-
-      echo running before_build
-      echo   - generator: %generator%
-      echo   - APPVEYOR_API_URL: %APPVEYOR_API_URL%
-      echo   - APPVEYOR_PROJECT_NAME: %APPVEYOR_PROJECT_NAME%
-      echo   - APPVEYOR_BUILD_FOLDER: %APPVEYOR_BUILD_FOLDER%
-      echo.
-
-      echo all variables:
-      SET
-      echo.
-
-      mkdir build
-      cd build
-      cmake --version
-      cmake -G %generator% ..
+  - sh: echo Running before_build on ubuntu
+  - sh: pwd
+  - cmd: echo Running before_build on windows
+  - mkdir build
+  - cd build
+  - cmake --version
+  - sh: cmake ..
+  - cmd: cmake -G %generator% ..
 
 build:
-  project: c:\projects\cmake-init\build\template.sln
+  project: build\ChristmasLightShowMaker.sln
   verbosity: minimal
   parallel: true
