--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ init:
 install:
   - git submodule update --init --recursive
   - sh: sudo apt-get update
-  - sh: sudo apt-get install xorg-dev libglu1-mesa-dev
+  - sh: sudo apt-get install -y xorg-dev libglu1-mesa-dev
 
 before_build:
   - sh: echo Running before_build on ubuntu
