--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,8 @@
-version: '{build}'
+version: 0.{build}
+
+environment:
+  LSM_VERSION: 1.0.$(APPVEYOR_BUILD_VERSION)
+
 image:
 #  - Visual Studio 2015
   - Visual Studio 2017
@@ -19,12 +23,15 @@ init:
       echo %generator%
   - sh: |-
       sudo apt-get update
-      sudo apt-get install -y xorg-dev libglu1-mesa-dev
+      sudo apt-get install -y xorg-dev libglu1-mesa-dev gtk2.0
 
 install:
   - git submodule update --init --recursive
 
 before_build:
+  - echo Building LSM version $(APPVEYOR_BUILD_VERSION)
+  - echo LSM_VERSION=$(LSM_VERSION)
+  - echo LSM_VERSION=%LSM_VERSION%
   - sh: echo Running before_build on ubuntu
   - sh: pwd
   - cmd: echo Running before_build on windows
