renamed ChristmasLightShowMaker into LightShowMaker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.12)
-project(ChristmasLightShowMaker)
+project(LightShowMaker)
 include("cmake/setup.cmake")
 
 add_subdirectory(libs)
