--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ add_subdirectory(core)
 add_subdirectory(media)
 add_subdirectory(model)
 add_subdirectory(editor)
-add_subdirectory(showmaker)
+add_subdirectory(lightshowmaker)
