--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,14 +24,12 @@ build_script:
 
 artifacts:
 - path: bin
-  name: showmaker-windows-x64-$(APPVEYOR_BUILD_VERSION)
+  name: lightshowmaker-v$(APPVEYOR_BUILD_VERSION)
 
 deploy:
-- release: showmaker-v$(APPVEYOR_REPO_TAG_NAME)
+- release: $(APPVEYOR_REPO_TAG_NAME)
   provider: GitHub
   auth_token:
     secure: bpeCseo8I1Z2Eq9ofzVpNvFQWI+D11TQAlZb1SIpWmzTxHEYhmlBbazeyW0WAazT
   on:
-    # deploy on tag push on master branch only
     branch: master
-    APPVEYOR_REPO_TAG: true
