--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,34 +4,34 @@ configuration: Release
 platform: x64
 
 init:
-- if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2013" ( set generator="Visual Studio 12 2013 Win64" )
-- if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2015" ( set generator="Visual Studio 14 2015 Win64" )
-- if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2017" ( set generator="Visual Studio 15 2017 Win64" )
-- echo %generator%
+  - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2013" ( set generator="Visual Studio 12 2013 Win64" )
+  - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2015" ( set generator="Visual Studio 14 2015 Win64" )
+  - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2017" ( set generator="Visual Studio 15 2017 Win64" )
+  - echo %generator%
 
 install:
-- git submodule update --init --recursive
+  - git submodule update --init --recursive
 
 before_build:
-- echo Building LSM version %APPVEYOR_BUILD_VERSION%
-- mkdir build
-- cd build
-- cmake --version
-- cmake -G %generator% .. -DCMAKE_BUILD_TYPE=Release "-DLSM_VERSION=%APPVEYOR_BUILD_VERSION%"
+  - echo Building LSM version %APPVEYOR_BUILD_VERSION%
+  - mkdir build
+  - cd build
+  - cmake --version
+  - cmake -G %generator% .. -DCMAKE_BUILD_TYPE=Release "-DLSM_VERSION=%APPVEYOR_BUILD_VERSION%"
 
 build:
-  project: build\LightShowMaker.sln
+  project: build\INSTALL.vcxproj
   verbosity: minimal
   parallel: true
 
 artifacts:
-- path: bin
-  name: lightshowmaker-v$(APPVEYOR_BUILD_VERSION)
+  - path: bin
+    name: lightshowmaker-v$(APPVEYOR_BUILD_VERSION)
 
 deploy:
-- release: $(APPVEYOR_REPO_TAG_NAME)
-  provider: GitHub
-  auth_token:
-    secure: bpeCseo8I1Z2Eq9ofzVpNvFQWI+D11TQAlZb1SIpWmzTxHEYhmlBbazeyW0WAazT
-  on:
-    APPVEYOR_REPO_TAG: true
+  - release: $(APPVEYOR_REPO_TAG_NAME)
+    provider: GitHub
+    auth_token:
+      secure: bpeCseo8I1Z2Eq9ofzVpNvFQWI+D11TQAlZb1SIpWmzTxHEYhmlBbazeyW0WAazT
+    on:
+      APPVEYOR_REPO_TAG: true
