fixed msvc compilation in pathie

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/open-source-parsers/jsoncpp.git
 [submodule "libs/pathie-cpp"]
 	path = libs/pathie-cpp
-	url = https://github.com/Quintus/pathie-cpp.git
+	url = https://github.com/aarcangeli/pathie-cpp.git
