--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,3 +1,4 @@
 file(GLOB_RECURSE SOURCES *.cpp)
 add_library(core ${SOURCES})
 target_include_directories(core PUBLIC .)
+target_link_libraries(core PUBLIC pathie)
